Fixed mobile text wrapping on contact form title

--- a/css/style.css
+++ b/css/style.css
@@ -1029,4 +1029,7 @@ a {
     #rocket-scrollbar {
         right: 15px !important;
     }
+    .desktop-br {
+        display: none;
+    }
 }
